// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Columns Correctly update references On addition 1`] = `
Object {
  "A1": Object {
    "content": "=D1",
    "format": undefined,
    "style": undefined,
  },
  "A2": Object {
    "content": "=Sheet1!D1",
    "format": undefined,
    "style": undefined,
  },
  "A3": Object {
    "content": "=Sheet2!B1",
    "format": undefined,
    "style": undefined,
  },
  "A5": Object {
    "content": "=SUM(A1:F1)",
    "format": undefined,
    "style": undefined,
  },
  "A6": Object {
    "content": "=SUM(E1:F1)",
    "format": undefined,
    "style": undefined,
  },
  "A7": Object {
    "content": "=SUM(D1:D2)",
    "format": undefined,
    "style": undefined,
  },
  "F1": Object {
    "content": "=A1",
    "format": undefined,
    "style": undefined,
  },
  "F2": Object {
    "content": "=D1",
    "format": undefined,
    "style": undefined,
  },
  "F3": Object {
    "content": "=$G1",
    "format": undefined,
    "style": undefined,
  },
  "F4": Object {
    "content": "=F3",
    "format": undefined,
    "style": undefined,
  },
}
`;

exports[`Columns Correctly update references On addition 2`] = `
Object {
  "A1": Object {
    "content": "=B1",
    "format": undefined,
    "style": undefined,
  },
  "A2": Object {
    "content": "=Sheet1!D1",
    "format": undefined,
    "style": undefined,
  },
  "A3": Object {
    "content": "=Sheet2!B1",
    "format": undefined,
    "style": undefined,
  },
}
`;

exports[`Columns Correctly update references On deletion 1`] = `
Object {
  "A1": Object {
    "content": "=#REF",
    "format": undefined,
    "style": undefined,
  },
  "A2": Object {
    "content": "=#REF",
    "format": undefined,
    "style": undefined,
  },
  "A3": Object {
    "content": "=Sheet2!B1",
    "format": undefined,
    "style": undefined,
  },
  "A5": Object {
    "content": "=SUM(A1:B1)",
    "format": undefined,
    "style": undefined,
  },
  "A6": Object {
    "content": "=SUM(B1)",
    "format": undefined,
    "style": undefined,
  },
  "A7": Object {
    "content": "=SUM(#REF)",
    "format": undefined,
    "style": undefined,
  },
  "B1": Object {
    "content": "=A1",
    "format": undefined,
    "style": undefined,
  },
  "B2": Object {
    "content": "=#REF",
    "format": undefined,
    "style": undefined,
  },
  "B3": Object {
    "content": "=$C1",
    "format": undefined,
    "style": undefined,
  },
  "B4": Object {
    "content": "=B3",
    "format": undefined,
    "style": undefined,
  },
}
`;

exports[`Columns Correctly update references On deletion 2`] = `
Object {
  "A1": Object {
    "content": "=B1",
    "format": undefined,
    "style": undefined,
  },
  "A2": Object {
    "content": "=#REF",
    "format": undefined,
    "style": undefined,
  },
  "A3": Object {
    "content": "=Sheet2!B1",
    "format": undefined,
    "style": undefined,
  },
}
`;

exports[`Rows Correctly update references On addition 1`] = `
Object {
  "A1": Object {
    "content": "=A4",
    "format": undefined,
    "style": undefined,
  },
  "A6": Object {
    "content": "=A1",
    "format": undefined,
    "style": undefined,
  },
  "B1": Object {
    "content": "=Sheet1!A4",
    "format": undefined,
    "style": undefined,
  },
  "B6": Object {
    "content": "=B1",
    "format": undefined,
    "style": undefined,
  },
  "C1": Object {
    "content": "=Sheet2!A2",
    "format": undefined,
    "style": undefined,
  },
  "C6": Object {
    "content": "=A$7",
    "format": undefined,
    "style": undefined,
  },
  "D6": Object {
    "content": "=C6",
    "format": undefined,
    "style": undefined,
  },
  "E1": Object {
    "content": "=SUM(A1:A6)",
    "format": undefined,
    "style": undefined,
  },
  "F1": Object {
    "content": "=SUM(A5:A6)",
    "format": undefined,
    "style": undefined,
  },
  "G1": Object {
    "content": "=SUM(B4:C4)",
    "format": undefined,
    "style": undefined,
  },
}
`;

exports[`Rows Correctly update references On addition 2`] = `
Object {
  "A1": Object {
    "content": "=A2",
    "format": undefined,
    "style": undefined,
  },
  "B1": Object {
    "content": "=Sheet1!A4",
    "format": undefined,
    "style": undefined,
  },
  "C1": Object {
    "content": "=Sheet2!A2",
    "format": undefined,
    "style": undefined,
  },
}
`;

exports[`Rows Correctly update references On deletion 1`] = `
Object {
  "A1": Object {
    "content": "=#REF",
    "format": undefined,
    "style": undefined,
  },
  "A2": Object {
    "content": "=A1",
    "format": undefined,
    "style": undefined,
  },
  "B1": Object {
    "content": "=#REF",
    "format": undefined,
    "style": undefined,
  },
  "B2": Object {
    "content": "=B1",
    "format": undefined,
    "style": undefined,
  },
  "C1": Object {
    "content": "=Sheet2!A2",
    "format": undefined,
    "style": undefined,
  },
  "C2": Object {
    "content": "=A$3",
    "format": undefined,
    "style": undefined,
  },
  "D2": Object {
    "content": "=C2",
    "format": undefined,
    "style": undefined,
  },
  "E1": Object {
    "content": "=SUM(A1:A2)",
    "format": undefined,
    "style": undefined,
  },
  "F1": Object {
    "content": "=SUM(A2)",
    "format": undefined,
    "style": undefined,
  },
  "G1": Object {
    "content": "=SUM(#REF)",
    "format": undefined,
    "style": undefined,
  },
}
`;

exports[`Rows Correctly update references On deletion 2`] = `
Object {
  "A1": Object {
    "content": "=A2",
    "format": undefined,
    "style": undefined,
  },
  "B1": Object {
    "content": "=#REF",
    "format": undefined,
    "style": undefined,
  },
  "C1": Object {
    "content": "=Sheet2!A2",
    "format": undefined,
    "style": undefined,
  },
}
`;

exports[`Rows Correctly update references delete row on inactive sheet 1`] = `
Object {
  "B2": Object {
    "content": "=Sheet1!A2",
    "format": undefined,
    "style": undefined,
  },
  "C1": Object {
    "content": "=Sheet2!A1",
    "format": undefined,
    "style": undefined,
  },
}
`;

exports[`Rows Correctly update references delete row on inactive sheet 2`] = `
Object {
  "A1": Object {
    "content": "=B1",
    "format": undefined,
    "style": undefined,
  },
  "B1": Object {
    "content": "=Sheet1!A2",
    "format": undefined,
    "style": undefined,
  },
  "C1": Object {
    "content": "=Sheet2!A1",
    "format": undefined,
    "style": undefined,
  },
}
`;
